# csv_mcp

./: README.md  pyproject.toml
src/csv_mcp/: __init__.py
