[project]
name = "csv-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bmgnagaraj", email = "bmgnagaraj@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
csv-mcp = "csv_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
